Добавление модулей и зависимостей для расширения функциональности проекта
- Обновление зависимостей для поддержки аутентификации, WebSocket и работы с API
- Добавление модулей AuthModule, PolygonModule и WebSocketModule
- Интеграция ConfigModule для управления конфигурацией
- Обновление конфигурации Prettier и ESLint

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,13 @@
 {
+  "bracketSpacing": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "arrowParens": "avoid",
+  "printWidth": 120,
+  "semi": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "endOfLine": "auto",
+  "bracketSameLine": false,
+  "singleAttributePerLine": true
 }
